# Linggan

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts  灵感桌面助手.md
src/: styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/ui/: App.tsx
src/utils/: rotation.ts  storage.ts
